"it's electric" news
http://tupelo-schneck.org/its-electric

Version 1.6 2010-07-15
======================
kVA data.
Fix bugs which made 1.5 work harder than needed.

Version 1.5 2010-06-25
======================
Voltage.
New full-screen and history displays.
Export functionality.

Version 1.4.2 2010-05-16
========================
Fix bug which prevented 1.4.1 working on a new database.

Version 1.4.1 2010-05-12
========================
Avoid taking on bad data when Gateway loses power.
Periodic syncing of database environment.
Various servlet bugfixes.

Version 1.4 2010-04-29
======================
Use raw rather than xml output from Gateway (suggestion of Stuart Rothrock / lugnut).
Periodically retrieve whole hour's worth of back data from Gateway (suggestion of Stuart Rothrock / lugnut).
Modify servlet code to accept more general parameters.
Print human-readable times in log file.
Pause before accessing the Gateway again immediately after a network problem.

Version 1.3.1 2010-03-26
========================
More forgiving timeout values when reading from the Gateway.
Better behavior when getting bad parameters over an HTTP request.

Version 1.3 2010-03-16
======================
Fixed a long-standing bug where scrolling the chart works badly for people in other time zones.
Better handling of daylight saving time.
Various fixes plus changes to default database cache size should eliminate OutOfMemory problems.

Version 1.2 2010-02-10
======================
The database environment will now be cleaned and checkpointed on startup.  This may be slow if you have many GB of database needing to be compacted; give it several minutes.
The database environment will be cleaned as necessary during operation.
New option -u for username to access TED Gateway.  (If a username is specified, "it's electric" will prompt for a password.)
Can now access TED Gateway over HTTPS.

Version 1.1 2009-12-15
======================