@@ -37,18 +37,14 @@ function ItsElectric(timelineId,busyId,resolutionId,initialZoom,realTimeUpdateIn
     this.minimum = 0;
     this.maximum = 0;
 
-    this.realTime = true; // set false to prevent auto-update at latest time
-
-    this.noFlashEvents = false; // set true to make it work (somewhat) when
-                                // accessing a file: URL without privileges
-
     this.realTimeUpdater = null;
 }
 
 ItsElectric.prototype.configure = function(config) {
     this.gatewayURL = config.gatewayURL;
-    this.partialRange = config.partialRange; // if true, graph only has points near the zoomed-in area
+    this.partialRange = config.partialRange;
     this.initialZoom = config.initialZoom;
+    this.realTime = config.realTime;
     this.realTimeUpdateInterval = config.realTimeUpdateInterval;
     this.hasVoltage = config.hasVoltage;
     this.hasKVA = config.hasKVA;
